fix 375px mc pictures-polygon overlap

--- a/ui/speaker-picture.module.scss
+++ b/ui/speaker-picture.module.scss
@@ -107,7 +107,7 @@
 }
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 374px) {
   .decoration-left,
   .decoration-right {
     height: 162px;
